a1/brendan_gordon/TEST_PROGRAMS/invalidtype/serguei_nevarko/invalid4.min
var x : float;
var y : string;

x = y;

print x;

